<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout01"
    style="@style/AppBaseTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/musicbackground" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Warning signs expect styles we do not wish to use -->
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/eztuner"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:text="@string/tuner" />

    <SeekBar
        android:id="@+id/freq"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/stopbutton1"
        android:layout_alignLeft="@+id/eqstart"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/startbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/startslider" />

    <Button
        android:id="@+id/stopbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/stopslider" />

    <Button
        android:id="@+id/eqstart"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/eztuner"
        android:layout_below="@+id/eztuner"
        android:layout_marginTop="49dp"
        android:text="@string/equalizer"
        android:visibility="visible" />

</RelativeLayout>