<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/visuaLlinarLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/vislay"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/rewindbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:contentDescription="@string/rewindbtn"
                android:onClick="rewind"
                android:src="@android:drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/playbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:contentDescription="@string/playbtn"
                android:onClick="play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/pausebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:contentDescription="@string/pausebtn"
                android:onClick="pause"
                android:src="@android:drawable/ic_media_pause" />

            <ImageButton
                android:id="@+id/forwardbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:contentDescription="@string/forwardbtn"
                android:onClick="forward"
                android:src="@android:drawable/ic_media_ff" />
        </LinearLayout>

        <Spinner
            android:id="@+id/eqspinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sliderlay"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:layout_gravity="left|top"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>